Name:           Kaos
version:    0.1
License:        GPL
License-File:   COPYING.txt
Author:         Bryan Donlan
Build-Depends:  base<4, mtl, haskell98, parsec, bytestring, containers , array
Synopsis:       Kaos Compiler
build-type: Custom
Executable:     kaos
Main-Is:        Main.hs
Hs-Source-Dirs: src, gen
ghc-options:    -Wall -Werror
extensions:     MultiParamTypeClasses, UndecidableInstances, GeneralizedNewtypeDeriving, BangPatterns, DeriveDataTypeable, TypeSynonymInstances, ScopedTypeVariables, FunctionalDependencies, FlexibleInstances, FlexibleContexts, RelaxedPolyRec, Rank2Types
